[gd_scene load_steps=4 format=3 uid="uid://ck7lj4dvngvav"]

[ext_resource type="Script" uid="uid://c81qcjqqrbf32" path="res://canvas.gd" id="1_owpp6"]
[ext_resource type="Texture2D" uid="uid://c0wjoc7bdvl33" path="res://art/sprites/background/outside.png" id="2_owpp6"]
[ext_resource type="Texture2D" uid="uid://dr30xfdfcoouf" path="res://art/canvas.png" id="3_sxins"]

[node name="Canvas" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_owpp6")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.529412)
position = Vector2(659, 113)
texture = ExtResource("2_owpp6")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(576, 377)
scale = Vector2(2.78646, 2.22917)
texture = ExtResource("3_sxins")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
mouse_filter = 2
expand_mode = 1
stretch_mode = 2

[node name="ColorPicker" type="ColorPicker" parent="."]
layout_mode = 1
offset_right = 298.0
offset_bottom = 572.0
mouse_filter = 0
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[node name="Clear" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
text = "Alles löschen"

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Zurück"

[node name="Save" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.6
anchor_right = 0.2
anchor_bottom = 0.7
offset_top = -4.0
offset_right = 8.0
offset_bottom = 4.0
grow_vertical = 2
text = "In die Gallerie speichern"

[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
